--- a/src/main/resources/templates/SystemAdmin/UserDetail.html
+++ b/src/main/resources/templates/SystemAdmin/UserDetail.html
@@ -109,7 +109,7 @@
         </div>
     </div>
 
-    <div th:replace="SystemAdmin/MainTemplate :: modals"></div>
+    <div th:replace="SystemAdmin/MainTemplate :: logoutModal"></div>
     
 </body>
 
