--- a/src/main/resources/templates/SystemAdmin/CategoryDetail.html
+++ b/src/main/resources/templates/SystemAdmin/CategoryDetail.html
@@ -127,7 +127,7 @@
         </div>
     </div>
 
-    <div th:replace="SystemAdmin/MainTemplate :: modals"></div>
+    <div th:replace="SystemAdmin/MainTemplate :: logoutModal"></div>
 
 </body>
 
