--- a/src/main/resources/templates/SystemAdmin/MainTemplate.html
+++ b/src/main/resources/templates/SystemAdmin/MainTemplate.html
@@ -158,7 +158,7 @@
 
     <!-- Logout Modal -->
     <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true"
-        th:fragment="modals">
+        th:fragment="logoutModal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
@@ -173,6 +173,34 @@
         </div>
     </div>
 
+    <!-- Delete Check Modal -->
+    <div class="modal fade" id="deleteCheckModal" tabindex="-1" aria-labelledby="deleteCheckModalLabel"
+        th:fragment="deleteCheckModal(deleteFormId)">
+
+        <script th:inline="javascript">
+            function submitManually(){
+                let submitFormId = /*[[${deleteFormId}]]*/ IDHERE;
+                $('form#' + submitFormId).submit();
+            }
+        </script>
+
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" style="color:#dc3545"><i class="fas fa-exclamation-triangle"></i> 確定刪除嗎？</h5>
+                </div>
+                <div class="modal-body">
+
+                    <p id="deleteModal-items"></p>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-danger" onclick="submitManually()">確定</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
