--- a/src/main/resources/templates/SystemAdmin/UserList.html
+++ b/src/main/resources/templates/SystemAdmin/UserList.html
@@ -156,7 +156,7 @@
         </div>
     </div>
 
-    <div th:replace="SystemAdmin/MainTemplate :: modals"></div>
+    <div th:replace="SystemAdmin/MainTemplate :: logoutModal"></div>
 
 </body>
 
