--- a/src/main/resources/static/stylesheet/mainTemplate.css
+++ b/src/main/resources/static/stylesheet/mainTemplate.css
@@ -23,3 +23,14 @@
     padding-top: 20px;
     padding-left: 50px;
 }
+
+.ucPager-div {
+    min-width: 400px;
+    max-width: 75%;
+    display: flex;
+    justify-content: center;
+}
+
+.ucPager-div>nav {
+    margin: 0 auto;
+}
