--- a/src/main/resources/templates/SystemAdmin/AccountingDetail.html
+++ b/src/main/resources/templates/SystemAdmin/AccountingDetail.html
@@ -1,21 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+<head th:replace="SystemAdmin/MainTemplate :: common_header(~{::title}, ~{}, ~{::head/script}, ~{::head/style})">
+
     <title>流水帳管理</title>
-
-    <link href="stylesheet/admin.css" rel="stylesheet" />
-    <link href="stylesheet/mainTemplate.css" rel="stylesheet" />
-
-    <script src="script/fontawesome-all.js"></script>
-    <script src="script/bootstrap.min.js"></script>
-    <script src="script/admin.js"></script>
-    <script src="script/jquery-3.6.0.min.js"></script>
 
     <style>
         select {
@@ -34,18 +22,6 @@
 
         #btnSave {
             margin-left: 20px;
-        }
-
-        .err-msg {
-            width: 100%;
-            margin-top: 0.25rem;
-            font-size: .875em;
-            color: #dc3545;
-        }
-
-        .err-msg-btn {
-            color: #dc3545;
-            display: inline-block;
         }
     </style>
     <script th:inline="javascript">
