1. 完成會員列表頁功能 2. 完成使用AOP的Logger.java

--- a/src/main/resources/templates/SystemAdmin/AccountingList.html
+++ b/src/main/resources/templates/SystemAdmin/AccountingList.html
@@ -52,6 +52,7 @@
                 let count = $('tbody th input[type=checkbox]:checked').length;
                 if (count == 0) {
                     $('#btnDelete').prop('disabled', true);
+                    $('#deleteModal-items').text('');
                 }
                 else {
                     $('#btnDelete').prop('disabled', false);
