--- a/src/main/resources/templates/SystemAdmin/UserList.html
+++ b/src/main/resources/templates/SystemAdmin/UserList.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head th:replace="SystemAdmin/MainTemplate :: common_header(~{::title}, ~{}, ~{}, ~{::head/style})">
+<head th:replace="SystemAdmin/MainTemplate :: common_header(~{::title}, ~{}, ~{::head/script}, ~{::head/style})">
 
     <title>會員管理</title>
 
@@ -21,6 +21,44 @@
             min-width: 65px;
         }
     </style>
+    <script th:inline="javascript">
+        var DeleteResultModal;
+        var deleteModalShow = /*[[${isDeleteRedirect}]]*/ false;
+
+        $(function () {
+            DeleteResultModal = new bootstrap.Modal(document.getElementById('deleteResultModal'), {
+                keyboard: false
+            });
+
+            // 如果事按刪除紐後重新導向回來，跳顯示結果的modal
+            if (deleteModalShow) {
+                DeleteResultModal.toggle();
+            }
+
+            // 刪除的checkbox事件
+            $('tbody th input[type=checkbox]').on('change', function () {
+                let count = $('tbody th input[type=checkbox]:checked').length;
+                if (count == 0) {
+                    $('#btnDelete').prop('disabled', true);
+                    $('#deleteModal-items').text('');
+                }
+                else {
+                    $('#btnDelete').prop('disabled', false);
+                    let itemStr = '';
+
+                    let i = 1;
+                    for (let item of $('tbody th input[type=checkbox]:checked')) {
+                        itemStr += $(item).parent().parent().siblings('td').eq(0).text();
+
+                        if (i++ != count) {
+                            itemStr += "、";
+                        }
+                    }
+                    $('#deleteModal-items').text(itemStr);
+                }
+            })
+        })
+    </script>
 </head>
 
 <body class="sb-nav-fixed">
@@ -48,8 +86,11 @@
 
                 <!-- Add & Delete button -->
                 <div>
-                    <button type="button" class="btn btn-outline-success">Add</button>
-                    <button type="button" class="btn btn-outline-danger">Delete</button>
+                    <a th:href="@{/userDetail}" role="button" class="btn btn-outline-success">Add</a>
+                    <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
+                        data-bs-target="#deleteCheckModal" id="btnDelete" disabled>
+                        Delete
+                    </button>
                 </div>
 
                 <!-- Table -->
@@ -67,72 +108,52 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <th scope="row">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                                    </div>
-                                </th>
-                                <td>RURU</td>
-                                <td>露123</td>
-                                <td>rurururu@gmail.com</td>
-                                <td>一般會員</td>
-                                <td>2021/7/5 10:30</td>
-                                <td><a href="#">Edit</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault1">
-                                    </div>
-                                </th>
-                                <td>Jack</td>
-                                <td>開膛手傑克</td>
-                                <td>rur123ururu@gmail.com</td>
-                                <td>一般會員</td>
-                                <td>2021/7/5 10:30</td>
-                                <td><a href="#">Edit</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault2">
-                                    </div>
-                                </th>
-                                <td>tanaka</td>
-                                <td>田中先生</td>
-                                <td>tanakatanaka@yahoo.com.tw/td>
-                                <td>管理者</td>
-                                <td>2021/7/5 10:30</td>
-                                <td><a href="#">Edit</a></td>
-                            </tr>
+                            <form th:action="@{/deleteUsers}" method="post" id="deleteForm">
+                                <tr th:each="user: ${userList}" th:object="${user}">
+                                    <th scope="row">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" th:value="*{userId}"
+                                            name="delCheckBoxes" th:if="${currentUserId} != *{userId}">
+                                        </div>
+                                    </th>
+                                    <td th:text="*{account}"></td>
+                                    <td th:text="*{name}"></td>
+                                    <td th:text="*{email}"></td>
+                                    <td th:text="*{level}"></td>
+                                    <td th:text="*{createDate}"></td>
+                                    <td><a th:href="@{/userDetail(UID=*{userId})}">Edit</a></td>
+                                </tr>
+                            </form>
                         </tbody>
                     </table>
                 </div>
 
                 <!-- pagination -->
-                <div class="ucPager-div">
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination">
-                            <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Previous">
-                                    <span aria-hidden="true">&laquo;</span>
-                                </a>
-                            </li>
-                            <li class="page-item"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Next">
-                                    <span aria-hidden="true">&raquo;</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
+                <div th:replace="SystemAdmin/MainTemplate :: pagination(${pagerObj})"></div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- Delete Result Modal -->
+    <div class="modal fade" id="deleteResultModal" tabindex="-1" aria-labelledby="deleteResultModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content" th:object="${errorCountAndMessageDto}">
+                <div class="modal-header">
+                    <h5 class="modal-title" style="color:#dc3545">共[[*{successCount}]]個成功，[[*{failedCount}]]個失敗</h5>
+                </div>
+                <div class="modal-body">
+                    <p th:each="msg: *{errMessages}" th:text="${msg}"></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">確定</button>
                 </div>
             </div>
         </div>
     </div>
+
+    <div th:replace="SystemAdmin/MainTemplate :: deleteCheckModal('deleteForm')"></div>
 
     <div th:replace="SystemAdmin/MainTemplate :: logoutModal"></div>
 
