--- a/src/main/resources/templates/SystemAdmin/UserDetail.html
+++ b/src/main/resources/templates/SystemAdmin/UserDetail.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head th:replace="SystemAdmin/MainTemplate :: common_header(~{::title}, ~{}, ~{}, ~{::head/style})">
-   
+<head th:replace="SystemAdmin/MainTemplate :: common_header(~{::title}, ~{}, ~{::head/script}, ~{::head/style})">
+
     <title>會員管理</title>
-    
+
     <style>
         .user-edit-div {
             max-width: 350px;
@@ -25,6 +25,22 @@
             margin-right: 8px;
         }
     </style>
+    <script th:inline="javascript">
+        var SuccessModal;
+        var SuccessModalShow = /*[[${isSuccessModalShow}]]*/ false;
+
+        $(function () {
+            SuccessModal = new bootstrap.Modal(document.getElementById('successModal'), {
+                keyboard: false
+            });
+
+            // 如果事按刪除紐後重新導向回來，跳顯示結果的modal
+            if (SuccessModalShow) {
+                SuccessModal.toggle();
+            }
+
+        })
+    </script>
 </head>
 
 <body class="sb-nav-fixed">
@@ -51,55 +67,70 @@
                 </nav>
 
                 <!-- Input -->
-                <div class="user-edit-div">
-                    <div class="mb-3 row">
-                        <label for="account" class="col-form-label">帳號</label>
-                        <div class="col-auto readonly-content">
-                            Moudou
+                <form th:action="${formAction}" method="post" th:object="${userInputDto}">
+                    <div class="user-edit-div">
+                        <div class="mb-3 row">
+                            <label for="account" class="col-form-label">帳號</label>
+                            <div th:class="'col-auto ' + (${#strings.contains(formAction, 'editUser')} ? 'readonly-content' : '')">
+                                <span th:if="${#strings.contains(formAction, 'editUser')}" th:text="*{account}"></span>
+
+                                <input type="text" class="form-control" th:if="${#strings.contains(formAction, 'newUser')}" th:field="*{account}">
+                                <div class="err-msg" th:each="error: ${#fields.errors('account')}" th:text="${error}" 
+                                    th:if="${#strings.contains(formAction, 'newUser')}"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="mb-3 row">
-                        <label for="name" class="col-form-label">姓名</label>
-                        <div class="col-auto">
-                            <input type="text" class="form-control" id="name" name="name">
+                        <div class="mb-3 row">
+                            <label for="name" class="col-form-label">姓名</label>
+                            <div class="col-auto">
+                                <input type="text" class="form-control" th:field="*{name}">
+                                <div class="err-msg" th:each="error: ${#fields.errors('name')}" th:text="${error}"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="mb-3 row">
-                        <label for="email" class="col-form-label">Email</label>
-                        <div class="col-auto">
-                            <input type="text" class="form-control" id="email" name="email">
+                        <div class="mb-3 row">
+                            <label for="email" class="col-form-label">Email</label>
+                            <div class="col-auto">
+                                <input type="text" class="form-control" th:field="*{email}">
+                                <div class="err-msg" th:each="error: ${#fields.errors('email')}" th:text="${error}"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="mb-3 row">
-                        <label for="level" class="col-form-label">等級</label>
-                        <div class="col-auto pt-1">
-                            <select class="form-select form-select-sm mb-3" aria-label=".form-select-sm example">
-                                <option valur="general" selected>一般會員</option>
-                                <option value="manager">管理者</option>
-                            </select>
+                        <div class="mb-3 row">
+                            <label for="level" class="col-form-label">等級</label>
+                            <div class="col-auto pt-1">
+                                <select class="form-select form-select-sm mb-3" th:field="*{level}">
+                                    <option value="general">一般會員</option>
+                                    <option value="manager">管理者</option>
+                                </select>
+                                <div class="err-msg" th:each="error: ${#fields.errors('level')}" th:text="${error}"></div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="mb-3 row">
-                        <label for="amount" class="col-form-label">建立時間</label>
-                        <div class="col-auto readonly-content">
-                            2021/7/2 03:04:05
+                        <div class="mb-3 row">
+                            <label for="amount" class="col-form-label">建立時間</label>
+                            <div class="col-auto readonly-content">
+                                <span th:text="*{createDate}"></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="mb-3 row">
-                        <label for="caption" class="col-form-label">修改時間</label>
-                        <div class="col-auto readonly-content">
-                            2021/7/3 10:15:05
+                        <div class="mb-3 row">
+                            <label for="caption" class="col-form-label">修改時間</label>
+                            <div class="col-auto readonly-content">
+                                <span th:text="*{modifyDate}"></span>
+                            </div>
                         </div>
+                        <button type="submit" class="btn btn-outline-primary" id="btnSave">Save</button>
+                        <a role="button" class="btn btn-outline-secondary" th:href="@{/userList}">Cancle</a>
+                        <div class="err-msg-btn" th:if="${databaseAddError != null}" th:text="${databaseAddError}"></div>
+                        
+                        <input type="hidden" th:field="*{userId}">
+
                     </div>
-                    <button type="button" class="btn btn-outline-primary" id="btnSave">Save</button>
-                    <button type="button" class="btn btn-outline-danger" id="btnDelete">Delete</button>
-                </div>
+                </form>
             </div>
         </div>
     </div>
 
     <div th:replace="SystemAdmin/MainTemplate :: logoutModal"></div>
-    
+
+    <div th:replace="SystemAdmin/MainTemplate :: successModal(${successType})"></div>
+
 </body>
 
 </html>
